create the add to watchlist template

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,11 @@
             .error {
                 color: red;
             }
+
+            body {
+                margin: 0 auto;
+                width: 980px;
+            }
         </style>
     </head>
     <body>
